Mantis 0000595: SMTP relayhost should be encapsulated in square brackets.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (4.0.15-1) stable; urgency=low
 
-  * 
+  * Mantis 0000595: SMTP relayhost should be encapsulated in square brackets.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Dec 2017 13:54:19 +0100
 
