--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (3.0.95) stable; urgency=low
 
-  *
+  * Increase 'Unit' column size in file system quota dialog.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Dec 2017 13:55:14 +0100
 
