--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -130,6 +130,12 @@ openmediavault (4.0) stable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 22 Feb 2017 13:28:40 +0100
 
+openmediavault (3.0.95) stable; urgency=low
+
+  * Increase 'Unit' column size in file system quota dialog.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Dec 2017 13:55:14 +0100
+
 openmediavault (3.0.94) stable; urgency=low
 
   * Support predictable network device names in omv-initsystem.
