--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-nut (4.0.9-1) stable; urgency=low
+
+  * Improve package postinst script. Restart collectd only if system
+    monitoring is enabled.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 15 Dec 2017 21:37:17 +0100
+
 openmediavault-nut (4.0.8-1) stable; urgency=low
 
   * Various improvements.
