--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/sv_SV/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/sv_SV/openmediavault-clamav.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-19 17:30+0000\n"
+"PO-Revision-Date: 2017-12-11 19:50+0000\n"
 "Last-Translator: Jonatan Nyberg\n"
 "Language-Team: Swedish (http://www.transifex.com/votdev/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Add on-access scan"
-msgstr ""
+msgstr "Lägg till åtkomstsökning"
 
 msgid "Add scheduled job"
 msgstr "Lägg till schemalagt jobb"
@@ -64,7 +64,7 @@ msgid "Done ..."
 msgstr "Klar ..."
 
 msgid "Edit on-access scan"
-msgstr ""
+msgstr "Redigera åtkomstsökning"
 
 msgid "Edit scheduled job"
 msgstr "Redigera schemalagt jobb"
@@ -165,7 +165,7 @@ msgid "Number of database update checks per day. Set to 0 to disable."
 msgstr "Antal databasuppdateringar per dag. Ange 0 för att inaktivera."
 
 msgid "On Access Scans"
-msgstr ""
+msgstr "På åtkomstsökning"
 
 msgid "On-access"
 msgstr "Vid åtkomst"
@@ -222,7 +222,7 @@ msgid "Shared folder"
 msgstr "Delad mapp"
 
 msgid "The location of the files to scan on-access."
-msgstr ""
+msgstr "Placeringen av filerna för att göra åtkomstsökning"
 
 msgid "The location of the files to scan."
 msgstr "Platsen för filerna som ska skannas."
