--- a/deb/openmediavault-snmp/usr/share/openmediavault/locale/hu_HU/openmediavault-snmp.po
+++ b/deb/openmediavault-snmp/usr/share/openmediavault/locale/hu_HU/openmediavault-snmp.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-09-24 20:46+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Gyuris Gellért <gellert.gyuris@protonmail.com>, 2017\n"
+"Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017\n"
 "Language-Team: Hungarian (Hungary) (https://www.transifex.com/votdev/teams/14254/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
