--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -5,7 +5,7 @@
 # Translators:
 # Ádám Balajti <balajtiadam@gmail.com>, 2012
 # Gábor Sári <sari.gabor@gmail.com>, 2017
-# Gyuris Gellért <gellert.gyuris@protonmail.com>, 2017
+# Gyuris Gellért <bubu@ujevangelizacio.hu>, 2017
 # Grawens <szabolcs.szanyi@gmail.com>, 2014-2017
 msgid ""
 msgstr ""
@@ -13,7 +13,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
 "PO-Revision-Date: 2017-11-20 17:49+0000\n"
-"Last-Translator: Gyuris Gellért <gellert.gyuris@protonmail.com>\n"
+"Last-Translator: Gyuris Gellért <bubu@ujevangelizacio.hu>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
