--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,8 @@ openmediavault (4.0.15-1) stable; urgency=low
     https://mozilla.github.io/server-side-tls/ssl-config-generator.
   * Mantis 0000595: SMTP relayhost should be encapsulated in square brackets.
   * Mantis 0001866: Configure APT proxy settings.
+  * Mantis 0001868: Use full login shell in S.M.A.R.T. cron script to use
+    the globally configured proxy settings.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Dec 2017 13:54:19 +0100
 
