Improve \OMV\System\Filesystem\Filesystem::hasFileSystem() method.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,7 @@ openmediavault (3.0.95) stable; urgency=low
   * Fix calculation of CPU utilization.
   * Use full login shell in user defined cron scripts.
   * Fix broken dependencies in place when updating packages via WebUI.
+  * Improve \OMV\System\Filesystem\Filesystem::hasFileSystem() method.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Dec 2017 13:55:14 +0100
 
