--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -3,6 +3,7 @@ openmediavault (4.0.15-1) stable; urgency=low
   * Adapt nginx SSL ciphers to latest modern profile according to
     https://mozilla.github.io/server-side-tls/ssl-config-generator.
   * Mantis 0000595: SMTP relayhost should be encapsulated in square brackets.
+  * Mantis 0001851: Add dependency 'zfs-mount' to shared folder unit file.
   * Mantis 0001866: Configure APT proxy settings.
   * Mantis 0001868: Use full login shell in S.M.A.R.T. cron script to use
     the globally configured proxy settings.
