--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -6,6 +6,7 @@ openmediavault (3.0.95) stable; urgency=low
   * Fix broken dependencies in place when updating packages via WebUI.
   * Improve \OMV\System\Filesystem\Filesystem::hasFileSystem() method.
   * Use atomic mkdir to create lock file in SMB recycle dir cron script.
+  * Only flush iptables INPUT/OUTPUT chains.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 02 Dec 2017 13:55:14 +0100
 
