--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.96) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 25 Dec 2017 20:56:49 +0100
+
 openmediavault (3.0.95) stable; urgency=low
 
   * Increase 'Unit' column size in file system quota dialog.
