--- a/deb/openmediavault-clamav/usr/share/openmediavault/locale/uk_UK/openmediavault-clamav.po
+++ b/deb/openmediavault-clamav/usr/share/openmediavault/locale/uk_UK/openmediavault-clamav.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-11-18 11:05+0100\n"
-"PO-Revision-Date: 2017-11-18 10:08+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2017-12-23 19:49+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -19,10 +19,10 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 msgid "Add on-access scan"
-msgstr ""
+msgstr "Додати сканування в режимі он-лайн"
 
 msgid "Add scheduled job"
-msgstr ""
+msgstr "Додати заплановане завдання"
 
 msgid "Algorithmic detection"
 msgstr "Алгоритмічне виявлення"
@@ -60,13 +60,13 @@ msgid "Detect broken executables"
 msgstr "Виявлення пошкоджених виконуваних файлів"
 
 msgid "Done ..."
-msgstr ""
+msgstr "Виконано ..."
 
 msgid "Edit on-access scan"
-msgstr ""
+msgstr "Редагувати сканування доступу до системи"
 
 msgid "Edit scheduled job"
-msgstr ""
+msgstr "Редагувати заплановане завдання"
 
 msgid "Enable"
 msgstr "Увімкнути"
@@ -113,7 +113,7 @@ msgid "Every N minute"
 msgstr "Кожну N хвилину"
 
 msgid "Execute scheduled job"
-msgstr ""
+msgstr "Виконати заплановану роботу"
 
 msgid "Extra options"
 msgstr "Додаткові опції"
@@ -164,7 +164,7 @@ msgid "Number of database update checks per day. Set to 0 to disable."
 msgstr "Кількість перевірок оновлень бази даних в день. Встановіть 0, щоб відключити."
 
 msgid "On Access Scans"
-msgstr ""
+msgstr "На сканування доступу"
 
 msgid "On-access"
 msgstr "При доступі"
@@ -221,7 +221,7 @@ msgid "Shared folder"
 msgstr "Спільна тека"
 
 msgid "The location of the files to scan on-access."
-msgstr ""
+msgstr "Розташування файлів для сканування доступу."
 
 msgid "The location of the files to scan."
 msgstr "Розташування файлів для сканування."
