--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/cs_CZ/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/cs_CZ/openmediavault-diskstats.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>, 2017\n"
 "Language-Team: Czech (Czech Republic) (https://www.transifex.com/votdev/teams/14254/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,13 +19,13 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "Diskový vst./výst."
 
 msgid "Operations"
-msgstr ""
+msgstr "Operace"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "Doba jednotlivé operace"
 
 msgid "Traffic"
-msgstr ""
+msgstr "Provoz"
