--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/ca_ES/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/ca_ES/openmediavault-diskstats.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Quim Farriol <quim@iscinformatica.cat>, 2018\n"
 "Language-Team: Catalan (Spain) (https://www.transifex.com/votdev/teams/14254/ca_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,13 +19,13 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "Disc I/O"
 
 msgid "Operations"
-msgstr ""
+msgstr "Operacions"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "Temps per operació"
 
 msgid "Traffic"
-msgstr ""
+msgstr "Tràfic"
