--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/ko_KR/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/ko_KR/openmediavault-diskstats.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Ji-Hyeon Gim <potatogim@potatogim.net>, 2018\n"
 "Language-Team: Korean (Korea) (https://www.transifex.com/votdev/teams/14254/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,13 +19,13 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "디스크 입/출력"
 
 msgid "Operations"
-msgstr ""
+msgstr "연산"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "시간당 연산"
 
 msgid "Traffic"
-msgstr ""
+msgstr "트래픽"
