--- a/deb/openmediavault-diskstats/debian/changelog
+++ b/deb/openmediavault-diskstats/debian/changelog
@@ -1,4 +1,11 @@
-openmediavault-diskstats (4.0) stable; urgency=low
+openmediavault-diskstats (4.0.1-1) stable; urgency=low
+
+  * Update locales.
+  * Mantis 0001875: Filter file systems without 'parentdevicefile' attribute.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 05 Jan 2018 08:15:13 +0100
+
+openmediavault-diskstats (4.0-1) stable; urgency=low
 
   * Initial release.
 
