Mantis 0001870: Can't mount some disks.
(cherry picked from commit 4b3d6db76ef746a13f6e0c8c1bf7d90a35f45f14)
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -145,6 +145,7 @@ openmediavault (4.0) stable; urgency=low
 openmediavault (3.0.96) stable; urgency=low
 
   * Various improvements.
+  * Mantis 0001870: Can't mount some disks.
   * Mantis 0001876: Create valid /dev/disk/by-label device files.
   * Mantis 0001877: Helper function omv_is_ipv6_enabled is broken.
 
