--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/it_IT/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/it_IT/openmediavault-diskstats.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>, 2018\n"
 "Language-Team: Italian (https://www.transifex.com/votdev/teams/14254/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,13 +19,13 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "I/O Disco"
 
 msgid "Operations"
-msgstr ""
+msgstr "Operazioni"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "Tempo a operazione"
 
 msgid "Traffic"
-msgstr ""
+msgstr "Traffico"
