--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/el_GR/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/el_GR/openmediavault-diskstats.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Kostas Moho <kgounaris@hotmail.com>, 2018\n"
 "Language-Team: Greek (Greece) (https://www.transifex.com/votdev/teams/14254/el_GR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,13 +19,13 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "Κίνηση Δίσκου"
 
 msgid "Operations"
-msgstr ""
+msgstr "Λειτουργίες"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "Χρόνος ανά λειτουργία"
 
 msgid "Traffic"
-msgstr ""
+msgstr "Κίνηση"
