--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/zh_CN/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/zh_CN/openmediavault-diskstats.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: songming <by@songming.me>, 2018\n"
 "Language-Team: Chinese (China) (https://www.transifex.com/votdev/teams/14254/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,13 +19,13 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "磁盘 I/O"
 
 msgid "Operations"
-msgstr ""
+msgstr "操作"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "每次操作时间"
 
 msgid "Traffic"
-msgstr ""
+msgstr "流量"
