Update changelog for next version.
Signed-off-by: Volker Theile <votdev@gmx.de>

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.0.17-1) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 06 Jan 2018 18:55:28 +0100
+
 openmediavault (4.0.16-1) stable; urgency=low
 
   * Various improvements.
