--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,6 @@
 openmediavault (4.0.17-1) stable; urgency=low
 
-  *
+  * Add 'Clear web control panel cache' option to omv-firstaid.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sat, 06 Jan 2018 18:55:28 +0100
 
