--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-netatalk (4.0.6-1) stable; urgency=low
+
+  * Update locales.
+  * Fix bug in the group privileges share configuration.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 19 Jan 2018 21:13:29 +0100
+
 openmediavault-netatalk (4.0.5-1) stable; urgency=low
 
   * Various improvements.
