--- a/deb/openmediavault-netatalk/debian/changelog
+++ b/deb/openmediavault-netatalk/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-netatalk (3.2.11) stable; urgency=low
+
+  * Fix bug in the group privileges share configuration.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 19 Jan 2018 21:17:12 +0100
+
 openmediavault-netatalk (3.2.10) stable; urgency=low
 
   * Various UI improvements.
