--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/ja_JP/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/ja_JP/openmediavault-diskstats.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>, 2018\n"
 "Language-Team: Japanese (Japan) (https://www.transifex.com/votdev/teams/14254/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,13 +19,13 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "ディスク I/O"
 
 msgid "Operations"
-msgstr ""
+msgstr "オペレーション"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "オペレーションあたりの時間"
 
 msgid "Traffic"
-msgstr ""
+msgstr "トラフィック"
