--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/pl_PL/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/pl_PL/openmediavault-diskstats.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: jacekniedziolka71 <lucas71@interia.pl>, 2018\n"
 "Language-Team: Polish (Poland) (https://www.transifex.com/votdev/teams/14254/pl_PL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,13 +19,13 @@ msgstr ""
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : (n%10>=2 && n%10<=4) && (n%100<12 || n%100>14) ? 1 : n!=1 && (n%10>=0 && n%10<=1) || (n%10>=5 && n%10<=9) || (n%100>=12 && n%100<=14) ? 2 : 3);\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "Dysk We/Wy"
 
 msgid "Operations"
-msgstr ""
+msgstr "Operacje"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "Czas na operację"
 
 msgid "Traffic"
-msgstr ""
+msgstr "Obciążenie"
