--- a/deb/openmediavault-diskstats/usr/share/openmediavault/locale/tr_TR/openmediavault-diskstats.po
+++ b/deb/openmediavault-diskstats/usr/share/openmediavault/locale/tr_TR/openmediavault-diskstats.po
@@ -10,6 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-12-31 13:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>, 2018\n"
 "Language-Team: Turkish (Turkey) (https://www.transifex.com/votdev/teams/14254/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
@@ -18,13 +19,13 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 msgid "Disk I/O"
-msgstr ""
+msgstr "Disk I/O"
 
 msgid "Operations"
-msgstr ""
+msgstr "Operasyonlar"
 
 msgid "Time per operation"
-msgstr ""
+msgstr "Operasyon zamanı"
 
 msgid "Traffic"
-msgstr ""
+msgstr "Trafik"
